@@ -42,8 +42,7 @@
 <a href=ref/Sound.html>Sound</a> || 
 <a href=ref/Surface.html>Surface</a> ||<br>
 &nbsp;<br>|| <a href=ref/pygame_cursors.html>cursors</a> || 
-<a href=ref/pygame_sprite.html>sprite</a> || 
-<a href=ref/pygame_version.html>version</a> ||<br>
+<a href=ref/pygame_sprite.html>sprite</a> ||<br>
 
 
 </td></tr></table></td></tr></table>
@@ -375,7 +374,6 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_transform.html#rotate>pygame.transform.rotate</a> - rotate a Surface<br>
 <a href=ref/pygame_transform.html#rotozoom>pygame.transform.rotozoom</a> - smoothly scale and/or rotate an image<br>
 <a href=ref/pygame_transform.html#scale>pygame.transform.scale</a> - scale a Surface to an arbitrary size<br>
-<a href=ref/pygame_version.html#ver>pygame.version.ver</a> - The current pygame version info<br>
 <!--ENDINDEX-->
 </ul>
 
