@@ -1,83 +1,0 @@
-<html>
-<title>pygame.version</title>
-<body bgcolor=#aaeebb text=#000000 link=#331111 vlink=#331111>
-
-
-<table cellspacing=3 width=100%><tr><td bgcolor=#00000>
-<table width=100%><tr><td bgcolor=c2fc20 align=center>
-    <a href=http://www.pygame.org>
-    <img src=../pygame_tiny.gif border=0 width=200 height=60></a><br>
-    <b>pygame&nbsp;&nbsp;&nbsp;documentation</b>
-</td><td bgcolor=6aee28 align=center valign=top width=100%>
-
-	||&nbsp;
-	<a href=http://www.pygame.org>Home</a> &nbsp;||&nbsp;
-	<a href=../index.html>Help Contents</a> &nbsp;||
-	<br>&nbsp;<br>
-
-|| <a href=pygame.html>pygame</a> || 
-<a href=pygame_cdrom.html>cdrom</a> || 
-<a href=pygame_constants.html>constants</a> || 
-<a href=pygame_display.html>display</a> || 
-<a href=pygame_draw.html>draw</a> || 
-<a href=pygame_event.html>event</a> ||<br>
-|| <a href=pygame_font.html>font</a> || 
-<a href=pygame_image.html>image</a> || 
-<a href=pygame_joystick.html>joystick</a> || 
-<a href=pygame_key.html>key</a> || 
-<a href=pygame_mixer.html>mixer</a> || 
-<a href=pygame_mixer_music.html>mixer_music</a> ||<br>
-|| <a href=pygame_mouse.html>mouse</a> || 
-<a href=pygame_movie.html>movie</a> || 
-<a href=pygame_surfarray.html>surfarray</a> || 
-<a href=pygame_time.html>time</a> || 
-<a href=pygame_transform.html>transform</a> ||<br>
-&nbsp;<br>|| <a href=CD.html>CD</a> || 
-<a href=Channel.html>Channel</a> || 
-<a href=Clock.html>Clock</a> || 
-<a href=Font.html>Font</a> || 
-<a href=Joystick.html>Joystick</a> || 
-<a href=Movie.html>Movie</a> ||<br>
-|| <a href=Rect.html>Rect</a> || 
-<a href=Sound.html>Sound</a> || 
-<a href=Surface.html>Surface</a> ||<br>
-&nbsp;<br>|| <a href=pygame_cursors.html>cursors</a> || 
-<a href=pygame_sprite.html>sprite</a> || 
-<a href=pygame_version.html>version</a> ||<br>
-
-
-</td></tr></table></td></tr></table>
-<br>
-<h2 align=center>pygame.version</h2>
-Simply the current installed pygame version. The version information is
-stored in the regular pygame module as 'pygame.ver'. Keeping the version
-information also available in a separate module allows you to test the
-pygame version without importing the main pygame module.
-<br>&nbsp;<br>
-The python version information should always compare greater than any previous
-releases. (hmm, until we get to versions > 10)
-<br>&nbsp;<br>
-
-<hr>
-
-<table>
-<tr><td><a href=#ver>ver</a></td><td> -
-The current pygame version info</td></tr>
-
-
-</table>
-
-<hr>
-
-<a name=ver><font size=+2><b>ver
-</b></font><br><font size=+1><tt>
-pygame.version.ver 
-</tt></font><ul>
-The ver variable is simply a string containing the version information
-for pygame. An example is "0.5" or "1.0"
-<br>&nbsp;<br>
-</ul><br>&nbsp;<br>
-
-
-<hr>
-</body></html>
